--- a/蒼乃建設(1セクターずつ4回目)/css/responsive.css
+++ b/蒼乃建設(1セクターずつ4回目)/css/responsive.css
@@ -104,58 +104,4 @@
 #footer__right li {
   padding: 17px 0;
 }
-
-
-
-/*--               footerここまで              --*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
+/*--               footerここまで              -
